[vuejs]Correct truncate names

--- a/assets/scss/token-page.sass
+++ b/assets/scss/token-page.sass
@@ -62,3 +62,4 @@
       display: table
       td:last-child
         padding-left: 0
+        padding-right: 10px
